// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`createMouseTool reducer sets the intial state 1`] = `
Object {
  "mouse": Object {
    "clientOffset": null,
    "currentBlock": 0,
    "currentPosition": null,
    "object": null,
    "startingPosition": null,
  },
  "tool": Object {
    "foo": "bar",
  },
}
`;

exports[`createMouseTool reducer sets the intial state 2`] = `
Object {
  "mouse": Object {
    "clientOffset": null,
    "currentBlock": 0,
    "currentPosition": null,
    "object": null,
    "startingPosition": null,
  },
  "tool": Object {},
}
`;
